<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
    </data>

    <androidx.cardview.widget.CardView
        android:elevation="10dp"
        android:id="@+id/id_root_layout"
        android:layout_gravity="center"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_margin="10dp"
                android:padding="15dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_marginEnd="5dp"
                    android:textColor="@color/grey_80"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:id="@+id/id_message"
                    android:text="@string/no_internet"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <ImageView
                    android:src="@drawable/ic_no_internet"
                    android:layout_marginTop="10dp"
                    android:id="@+id/id_image"
                    android:layout_gravity="center"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:numStars="5"
                    android:stepSize="1"
                    android:contentDescription="@string/content_description" />

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:textColor="@color/grey_90"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:text="@string/make_sure_active_connection"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/id_negative"
                        android:textStyle="bold"
                        android:backgroundTint="@color/grey_20"
                        android:layout_weight="1"
                        android:layout_marginEnd="5dp"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:textColor="@color/grey_90"
                        android:text="@string/stay_offline"
                        android:textAllCaps="true"
                        style="?android:attr/buttonBarButtonStyle" />

                    <Button
                        android:textStyle="bold"
                        android:id="@+id/id_positive"
                        android:backgroundTint="@color/purple_500"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_marginStart="5dp"
                        android:layout_height="50dp"
                        android:textColor="@color/white"
                        android:textAllCaps="true"
                        android:text="@string/try_again"
                        style="?android:attr/buttonBarButtonStyle" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>




